# todo-hours

./: .gitignore  Makefile  README.md  go.mod  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/todo-hours/: main.go
internal/todohours/: todohours.go  todohours_test.go
src/todo_hours/: __init__.py  main.py
tests/: test_main.py
